--- a/cured.html
+++ b/cured.html
@@ -5,11 +5,30 @@
   <title>upyachka.js — cured example</title>
 
   <style type="text/css">
+    body {
+      font-family: sans-serif;
+      line-height: 1.6;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+      border-bottom: 1px solid #ccc;
+    }
+    a:hover {
+      border-bottom: 1px solid;
+    }
+    hr {
+      border: none;
+      border-bottom: 1px solid #ccc;
+    }
+
+    /* Responsive images */
     img {
       max-width: 100%;
       height: auto;
     }
 
+    /* Placeholder background */
     img.upyachka {
       background-color: #f3f3f3;
     }
@@ -21,10 +40,10 @@
 </head>
 <body>
 
-<h1>upyachka.js</h1>
+<h1><a href="https://github.com/artpolikarpov/upyachka.js">upyachka.js</a></h1>
 
 <h2>
-  <a href="sick.html" style="color: black;">sick</a>
+  <a href="sick.html">sick</a>
   /
   <span href="cured.html" style="color: green;">cured</span>
 </h2>
