--- a/sick.html
+++ b/sick.html
@@ -5,6 +5,24 @@
   <title>upyachka.js — sick example</title>
 
   <style type="text/css">
+    body {
+      font-family: sans-serif;
+      line-height: 1.6;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+      border-bottom: 1px solid #ccc;
+    }
+    a:hover {
+      border-bottom: 1px solid;
+    }
+    hr {
+      border: none;
+      border-bottom: 1px solid #ccc;
+    }
+
+    /* Responsive images */
     img {
       max-width: 100%;
       height: auto;
@@ -17,12 +35,12 @@
 </head>
 <body>
 
-<h1>upyachka.js</h1>
+<h1><a href="https://github.com/artpolikarpov/upyachka.js">upyachka.js</a></h1>
 
 <h2>
   <span href="sick.html" style="color: red;">sick</span>
   /
-  <a href="cured.html" style="color: black;">cured</a>
+  <a href="cured.html">cured</a>
 </h2>
 
 <p>
