--- a/examples/sick.html
+++ b/examples/sick.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>upyachka.js — cured example</title>
+  <title>upyachka.js — sick example</title>
 
   <style type="text/css">
     body {
@@ -27,42 +27,34 @@
       max-width: 100%;
       height: auto;
     }
-
-    /* Placeholder background */
-    img.upyachka {
-      background-color: #f3f3f3;
-    }
   </style>
 
-  <script src="src/bower_components/jquery/dist/jquery.min.js"></script>
-  <!--<script src="src/bower_components/zepto/zepto.min.js"></script>-->
-  <script src="upyachka.min.js"></script>
+  <script src="../src/bower_components/jquery/dist/jquery.min.js"></script>
+  <!--<script src="../src/bower_components/zepto/zepto.min.js"></script>-->
+  <!--<script src="upyachka.min.js"></script>-->
 </head>
 <body>
 
 <h1><a href="https://github.com/artpolikarpov/upyachka.js">upyachka.js</a></h1>
 
 <h2>
-  <a href="sick.html">sick</a>
+  <span href="sick.html" style="color: red;">sick</span>
   /
-  <span href="cured.html" style="color: green;">cured</span>
+  <a href="cured.html">cured</a>
 </h2>
 
 <p>
-  <strong>This page is cured of upyachka</strong> with one line:
+  <strong>This page has upyachka.</strong>
 </p>
 
-<pre><code>&lt;script <mark>src="upyachka.min.js"</mark>>&lt;/script></code></pre>
-
-<p>Refresh, scroll down and see that browser reserves the appropriate space to images and keeps them responsive.</p>
-<p>Layout doesn’t jump during loading.</p>
+<p>Disable cache, refresh, scroll down and see how layout jumps during loading.</p>
 
 <hr/>
 
 <p><br/></p>
 
 <figure>
-  <img src="https://s3.amazonaws.com/ooomf-com-files/OwfYyiJXQ6qddLgTOBGX_Ariana%20Prestes%20photos%20(4).jpg" alt="" width="2048" height="1365"/>
+  <img src="https://s3.amazonaws.com/ooomf-com-files/OwfYyiJXQ6qddLgTOBGX_Ariana%20Prestes%20photos%20(4).jpg" alt="" width="1280" height="853"/>
   <figcaption>
     By <a href="https://www.flickr.com/photos/kiddinha/">Ariana Prestes</a>
   </figcaption>
