--- a/examples/sick.html
+++ b/examples/sick.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>upyachka.js — sick example</title>
 
   <style type="text/css">
